--- a/wss-unified-agent.config
+++ b/wss-unified-agent.config
@@ -88,7 +88,7 @@ npm.identifyByNameAndVersion=true
 #npm.removeDuplicateDependencies=false
 #npm.resolveAdditionalDependencies=true
 #npm.failOnNpmLsErrors = 
-#npm.projectNameFromDependencyFile = true
+npm.projectNameFromDependencyFile = true
 #npm.resolveGlobalPackages=true							   
 #npm.resolveLockFile=true
 
